--- a/Web/index.html
+++ b/Web/index.html
@@ -1,1 +1,43 @@
-<html><body><h1>My site works</h1></body></html>
+<!DOCTYPE html>
+<html lang="pt">
+<head>
+	<!-- Latest compiled and minified CSS -->
+	<link rel="stylesheet" href="Public/css/bootstrap.min.css">
+	<!-- Latest compiled and minified JavaScript -->
+	<script src="Public/js/bootstrap.min.js"></script>
+	<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+   
+	<script src="Public/js/angular.min.js"></script>
+
+	<!--mine -->
+	<link rel="stylesheet" href="css/deepexplore.css">
+
+   <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+    <title>Deep Explorer</title>
+</head>
+
+
+
+  <body>
+  <nav class="navbar navbar-default navbar-static-top">
+  <div class="container">
+    <a class="navbar-brand" href="#">DeepExplorer</a>
+  </div>
+</nav>
+  	<div class="container inputword">
+  <form>
+    <div class="form-group">
+      <label for="Palavra">Introduza uma palavra</label>
+      <input type="text" class="form-control" placeholder="Palavra">
+      <button type="submit" class="btn btn-primary">Pesquisar</button>
+    </div>
+    </form>
+</div>
+  </body>
+  
+
+</html>
+
