refactorização, com uma factory para tratar da package database, organização na package depedency

--- a/Web/index.html
+++ b/Web/index.html
@@ -32,7 +32,7 @@
   <header>
     <nav class="navbar navbar-default navbar-static-top">
       <div class="container">
-        <a class="navbar-brand" href="/">DeepExplorer</a>
+        <a class="navbar-brand" href="/#/">DeepExplorer</a>
       </div>
     </nav>
   </header>
