novas opções na interface

--- a/Web/index.html
+++ b/Web/index.html
@@ -4,6 +4,7 @@
 	 <!-- Latest compiled and minified CSS -->
 	 <link rel="stylesheet" href="components/css/bootstrap.min.css">
    <link rel="stylesheet" href="components/css/bootstrap-theme.min.css">
+
 	 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
    <!-- Latest compiled and minified JavaScript -->
@@ -29,7 +30,7 @@
   <header>
     <nav class="navbar navbar-default navbar-static-top">
       <div class="container">
-        <a class="navbar-brand" href="/#/">DeepExplorer</a>
+        <a class="navbar-brand" href="/#/">DeepSTRING</a>
       </div>
     </nav>
   </header>
