--- a/Web/index.html
+++ b/Web/index.html
@@ -4,6 +4,8 @@
 	 <!-- Latest compiled and minified CSS -->
 	 <link rel="stylesheet" href="components/css/bootstrap.min.css">
    <link rel="stylesheet" href="components/css/bootstrap-theme.min.css">
+   <link rel="stylesheet" href="components/css/8-circle.css">
+   
 
 	 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
