--- a/Web/index.html
+++ b/Web/index.html
@@ -27,7 +27,7 @@
    <base href="/"/>
    <meta name="viewport" content="width=device-width, initial-scale=1">
    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-   <title>Deep STRINGs</title>
+   <title>Deep STRING</title>
   </head>
 
 <!-- HEADER AND NAVBAR -->
