melhorias nas queries e correção de pequenos erros

--- a/Web/index.html
+++ b/Web/index.html
@@ -8,7 +8,9 @@
    
 
 	 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+   <!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>-->
+   <script src="components/js/jQuery-1.11.2.js"></script> 
+ 
    <!-- Latest compiled and minified JavaScript -->
 	 <script src="components/js/bootstrap/bootstrap.min.js"></script>
 
