--- a/Web/index.html
+++ b/Web/index.html
@@ -2,9 +2,9 @@
 <html ng-app="deepApp" lang="pt">
   <head>
 	 <!-- Latest compiled and minified CSS -->
-	 <link rel="stylesheet" href="components/css/bootstrap.min.css">
-   <link rel="stylesheet" href="components/css/bootstrap-theme.min.css">
-   <link rel="stylesheet" href="components/css/8-circle.css">
+	 <link rel="stylesheet" type="text/css" href="components/css/bootstrap.min.css">
+   <link rel="stylesheet" type="text/css" href="components/css/bootstrap-theme.min.css">
+   <link rel="stylesheet" type="text/css" href="components/css/8-circle.css">
    
 
 	 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
@@ -18,7 +18,7 @@
    <script src="components/js/angular/angular-route.min.js"></script>
 
 	<!--mine -->
-	 <link rel="stylesheet" href="css/deepexplore.css">
+	 <link rel="stylesheet" type="text/css" href="css/deepexplore.css">
    <script src="js/deepApp.js"></script>
 
 
