correções, esta tudo ok

--- a/Web/index.html
+++ b/Web/index.html
@@ -29,7 +29,7 @@
    <base href="/"/>
    <meta name="viewport" content="width=device-width, initial-scale=1">
    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-   <title>Deep STRING</title>
+   <title>DeepSTRING</title>
   </head>
 
 <!-- HEADER AND NAVBAR -->
@@ -37,6 +37,10 @@
     <nav class="navbar navbar-default navbar-static-top">
       <div class="container">
         <a class="navbar-brand" href="/#/">DeepSTRING</a>
+         <ul class="nav navbar-nav navbar-right">
+          <li><a href="#">Help</a></li>
+          <li><a href="#">About</a></li>
+          </ul>
       </div>
     </nav>
   </header>
