inicio da reextruturação

--- a/Web/index.html
+++ b/Web/index.html
@@ -18,8 +18,8 @@
    <script src="components/js/angular/angular-route.min.js"></script>
 
 	<!--mine -->
-	 <link rel="stylesheet" type="text/css" href="css/deepexplore.css">
-   <script src="js/deepApp.js"></script>
+	 <link rel="stylesheet" type="text/css" href="styles/deepexplore.css">
+   <script src="scripts/deepApp.js"></script>
 
 
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
