inicio da reextruturação_1

--- a/Web/index.html
+++ b/Web/index.html
@@ -18,7 +18,7 @@
    <script src="components/js/angular/angular-route.min.js"></script>
 
 	<!--mine -->
-	 <link rel="stylesheet" type="text/css" href="styles/deepexplore.css">
+	 <link rel="stylesheet" type="text/css" href="styles/deepstring.css">
    <script src="scripts/deepApp.js"></script>
 
 
