reextruturação dos services, e em parte dos controladores

--- a/Web/index.html
+++ b/Web/index.html
@@ -29,6 +29,7 @@
    <meta charset="UTF-8">
    <!--<base href="/">-->
    <base href="/"/>
+
    <meta name="viewport" content="width=device-width, initial-scale=1">
    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
    <title>DeepSTRING</title>
@@ -39,8 +40,8 @@
       <div class = "deep_content">
         <ul class="nav nav-pills">
           <li role="presentation" class="active"><a href="#/">New Search</a></li>
-          <li role="presentation"><a href="#">Help</a></li>
-          <li role="presentation"><a href="#">About</a></li>
+          <li role="presentation"><a ng-href="#/help">Help</a></li>
+          <li role="presentation"><a ng-href="#/about">About</a></li>
         </ul>
         
         <div ng-view></div>
