posttoPHP aogra já não é um serviço, mas sim uma função do rootScope

--- a/Web/index.html
+++ b/Web/index.html
@@ -68,7 +68,7 @@
         <div class="sk-circle12 sk-child"></div>
       </div>
       <div class = "waitText">
-        <button type="button" class="btn btn-link" ng-click="reloadPage()">
+        <button type="button" class="btn btn-link" ng-click="goToHomePage()">
           New Search
         </button>
       </div>
